Dissolve Vertices/Edges creates duplicate face #70286

Closed
opened 2019-09-26 21:41:35 +02:00 by Henrik D. · 8 comments
Member

System Information
Operating system: Linux
Graphics card: GTX 1070

Blender Version
Broken: 2.80
Worked: -

Short description of error
related to https://developer.blender.org/T70287
If used in the correct/wrong way, the dissolve vert function can create duplicate faces

Exact steps for others to reproduce the error
Based on the default startup:

  1. add a Tetrahedron in your favorite way (for example a cone with 3 segments and filled base plate)
  2. dissolve one edge of the tetrahedron with X->Dissolve Edges and F6->Dissolve Verts=0 so the vertices stay the same
  3. dissolve one of the vertices that now only have 2 adjacent edges with X->Dissolve Vertices
    you should be left with a duplicate triangle with normals pointing in different directions.
**System Information** Operating system: Linux Graphics card: GTX 1070 **Blender Version** Broken: 2.80 Worked: - **Short description of error** related to https://developer.blender.org/T70287 If used in the correct/wrong way, the dissolve vert function can create duplicate faces **Exact steps for others to reproduce the error** Based on the default startup: 1. add a Tetrahedron in your favorite way (for example a cone with 3 segments and filled base plate) 2. dissolve one edge of the tetrahedron with X->Dissolve Edges and F6->Dissolve Verts=0 so the vertices stay the same 3. dissolve one of the vertices that now only have 2 adjacent edges with X->Dissolve Vertices you should be left with a duplicate triangle with normals pointing in different directions.
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

#70287 was marked as duplicate of this issue

#70287 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2019-09-27 19:21:32 +02:00
Germano Cavalcante was unassigned by Dalai Felinto 2019-12-23 13:49:11 +01:00

Closed as duplicate of #70287

Closed as duplicate of #70287
Author
Member

@mano-wii can you reopen this task as low priority? The one that it has been marked a duplicate of is fixed, but this issue persists nevertheless.

@mano-wii can you reopen this task as low priority? The one that it has been marked a duplicate of is fixed, but this issue persists nevertheless.

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Campbell Barton self-assigned this 2021-04-14 16:52:53 +02:00

This issue was referenced by adb21faa83

This issue was referenced by adb21faa83d69069418d7bb14e0211261072f3a9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70286
No description provided.