Fix T70286: Dissolve vertices/edges creates duplicate face